--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -b",
-    "start": "node dist/index.js"
+    "dev:docker": "npx prisma migrate dev &&node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@prisma/client": "^6.19.1",
     "dotenv": "^17.2.3",
     "prisma": "^6.19.1",
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@prisma/client": "^6.19.1",
     "@types/express": "^5.0.6",
     "express": "^5.2.1",
     "mongoose": "^9.1.2"
